# parameters_transmitting

./: README.md
src/parameters_trans/: CMakeLists.txt  package.xml
src/parameters_trans/config/: parameters.yaml
src/parameters_trans/include/parameters_trans/global_defination/: global_defination.h.in
src/parameters_trans/src/: test1.cpp
